fix: add missing background color to file nav

--- a/skinStyles/mediawiki/action/mediawiki.action.view.filepage.less
+++ b/skinStyles/mediawiki/action/mediawiki.action.view.filepage.less
@@ -11,6 +11,7 @@
 	overflow: auto;
 	padding: 0;
 	border-color: var( --border-color-base );
+	background-color: var( --background-color-framed );
 	margin: 0;
 	transition: @transition-margin, @transition-padding;
 	white-space: nowrap;
